--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -12,7 +12,7 @@ body {
 
 .turbolinks-progress-bar {
   height: 2px;
-  background-color: #2E2EFF;
+  background-color: #2e2eff;
 }
 
 h3 {
@@ -20,7 +20,7 @@ h3 {
 }
 
 a {
-  color: #2E2EFF;
+  color: #2e2eff;
   text-decoration: none;
   background-color: transparent;
 }
@@ -59,7 +59,7 @@ ul.not-list {
 
   /* Vertically center the text there */
   background-color: #f5f5f5;
-  color: #4F545A;
+  color: #4f545a;
 }
 
 .pagination {
@@ -78,7 +78,7 @@ ul.not-list {
 }
 
 .navbar {
-  background-color: #24292E !important;
+  background-color: #24292e !important;
 }
 
 .navbar-brand img {
@@ -91,17 +91,17 @@ ul.not-list {
     border-radius: 2rem;
     border: 0;
     background-color: #404448;
-    color: #DADADC;
+    color: #dadadc;
   }
 
   ::placeholder {
-    color: #DADADC !important;
+    color: #dadadc !important;
   }
 }
 
 .form-group.has-search {
   margin-bottom: 0;
-  background-color: #24292E;
+  background-color: #24292e;
 }
 
 .has-search .form-control-feedback {
@@ -113,7 +113,7 @@ ul.not-list {
   line-height: 2.375rem;
   text-align: center;
   pointer-events: none;
-  color: #DADADC;
+  color: #dadadc;
 }
 
 .width-full {
@@ -153,13 +153,13 @@ ul.not-list {
 
 .middle-dot-divider {
   &::after {
-    content: '\00B7';
+    content: "\00B7";
     padding: 0 6px;
     font-weight: 600;
   }
 
   &:last-child::after {
-    content: '';
+    content: "";
     padding: 0;
   }
 }
@@ -425,7 +425,7 @@ ul.not-list {
   .blockquote {
     padding: 0 1em;
     color: #6a737d;
-    border-left: .25em solid #dfe2e5;
+    border-left: 0.25em solid #dfe2e5;
     margin-top: 0;
     margin-bottom: 16px;
     font-size: 1rem;
@@ -523,19 +523,19 @@ ul.not-list {
   cursor: pointer;
   border: 0;
   border-bottom: 2px solid transparent;
-  transition: border-bottom-color .4s;
+  transition: border-bottom-color 0.4s;
   padding-top: 1rem;
   padding-bottom: 1rem;
 
   &.active {
     font-weight: 500;
     color: #1b1f23 !important;
-    border-bottom-color: #2E2EFF !important;
+    border-bottom-color: #2e2eff !important;
   }
 
   &:hover {
     color: #1b1f23 !important;
-    border-bottom-color: #E1E4E8;
+    border-bottom-color: #e1e4e8;
   }
 }
 
@@ -546,16 +546,16 @@ ul.not-list {
 
 .badge-info {
   color: #fff;
-  background-color: #0C5F6E;
+  background-color: #0c5f6e;
 }
 
 .page-link {
   position: relative;
   display: block;
-  padding: .5rem .75rem;
+  padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #2E2EFF;
+  color: #2e2eff;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
@@ -563,8 +563,8 @@ ul.not-list {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #2E2EFF;
-  border-color: #2E2EFF;
+  background-color: #2e2eff;
+  border-color: #2e2eff;
 }
 
 .page-item.disabled .page-link {
