--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,4 +2,5 @@
 @import "~@fortawesome/fontawesome-free/css/all.css";
 @import "~highlight.js/scss/github.scss";
 @import "~jqcloud2/src/jqcloud.scss";
+@import "styles/variables.scss";
 @import "styles/custom.scss";
