--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -553,18 +553,13 @@ ul.not-list {
   padding: 16px;
   border-bottom: 1px solid var(--border-color);
 
-  img.avatar {
-    width: 64px;
-    height: 64px;
-  }
-
   &:last-child {
     border-bottom: 0px transparent;
   }
 }
 
 .nav-tabs {
-  border-bottom: 1px solid var(--border-color);
+  border-bottom: 0px transparent;
 
   .nav-link {
     color: var(--nav-link-color);
