--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -295,6 +295,9 @@ ul.not-list {
 
   a {
     color: var(--link-color);
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   .archived-badge {
@@ -411,6 +414,9 @@ ul.not-list {
 
   a {
     color: var(--link-color);
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
@@ -429,6 +435,9 @@ ul.not-list {
 
   a {
     color: var(--link-color);
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
