--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -46,7 +46,7 @@ html.dark {
   --code-color: #f8f8f8;
   --code-bg-color: #0e1117;
   --alert-success-color: #fff;
-  --alert-success-bg-color: #094809;
+  --alert-success-bg-color: #58a6ff;
   --alert-success-border-color: #07693c;
 
   .btn-close {
