--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,5 +2,6 @@
 @import "~@fortawesome/fontawesome-free/css/all.css";
 @import "~highlight.js/scss/github.scss";
 @import "~jqcloud2/src/jqcloud.scss";
+@import "styles/hljs.scss";
 @import "styles/variables.scss";
 @import "styles/custom.scss";
