--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -399,6 +399,10 @@ ul.not-list {
 .shard__topics {
   white-space: initial;
   margin-bottom: 5px;
+
+  .bg-secondary {
+    background-color: var(--badge-bg-color) !important;
+  }
 }
 
 .info-block {
