--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,7 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~@fortawesome/fontawesome-free/css/all.css";
-@import "~highlight.js/scss/github.scss";
 @import "~jqcloud2/src/jqcloud.scss";
-@import "styles/hljs.scss";
+@import "styles/code.scss";
 @import "styles/variables.scss";
 @import "styles/custom.scss";
