--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -513,6 +513,11 @@ ul.not-list {
     margin-bottom: 16px;
     font-size: 1rem;
   }
+
+  li.checklist-item {
+    list-style: none;
+    margin-left: -1rem;
+  }
 }
 
 .list__heading {
