show anchor link in readme for small screens

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -507,6 +507,9 @@ ul.not-list {
         fill: var(--font-color);
         vertical-align: middle;
         visibility: hidden;
+        @include media-breakpoint-down(md) {
+          visibility: visible;
+        }
       }
     }
   }
