--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,6 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~@fortawesome/fontawesome-free/css/all.css";
 @import "~jqcloud2/src/jqcloud";
-@import "styles/code";
+@import "vendor/code";
 @import "styles/variables";
 @import "styles/custom";
