remove selector-id-pattern

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -114,7 +114,7 @@ ul.not-list {
   background-color: var(--navbar-bg-color) !important;
 }
 
-#standWithUkraine {
+#stand-with-ukraine {
   margin: 1rem 0;
 
   .blue-band {
