--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -397,6 +397,17 @@ ul.not-list {
   }
 }
 
+.shard__postinstall_script {
+  .code {
+    background-color: var(--code-bg-color);
+    padding: 0.4em 0.6em;
+
+    code {
+      background-color: var(--code-bg-color);
+    }
+  }
+}
+
 .shard__statistic {
   border-left: 1px solid var(--border-color);
 }
