--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -499,6 +499,10 @@ ul.not-list {
     height: auto;
   }
 
+  video {
+    max-width: 100% !important;
+  }
+
   code {
     font-size: 85%;
     color: var(--code-color);
