add languages cloud

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -760,6 +760,11 @@ ul.not-list {
   height: 50vh;
 }
 
+#languages-cloud {
+  width: 100%;
+  height: 50vh;
+}
+
 .badge-info {
   color: #fff;
   background-color: #0c5f6e;
