--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -459,6 +459,12 @@ ul.not-list {
   overflow-wrap: break-word;
   word-wrap: break-word;
 
+  table {
+    thead {
+      text-align: center;
+    }
+  }
+
   :is(h1, h2, h3, h4, h5, h6) {
     font-weight: 600;
     margin-bottom: 16px;
