--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -11,7 +11,7 @@
 
 html {
   --main-bg-color: #fff;
-  --navbar-bg-color: #24292e;
+  --navbar-bg-color: #2d333b;
   --font-color: #212529;
   --link-color: #000;
   --regular-link-color: #2e2eff;
@@ -25,7 +25,7 @@ html {
   --pg-active-color: #fff;
   --code-color: #333;
   --code-bg-color: #f7f8fa;
-  --code-inline-bg-color: #f3f4f4;
+  --code-inline-bg-color: #afb8c133;
   --avatar-bg-color: #fff;
   --alert-success-color: #0f5132;
   --alert-success-bg-color: #d1e7dd;
@@ -45,20 +45,20 @@ html {
 }
 
 html.dark {
-  --main-bg-color: #181b22;
-  --page-heading-bg-color: #0e1117;
-  --navbar-bg-color: #181b22;
+  --main-bg-color: #22272e;
+  --page-heading-bg-color: #2d333b;
+  --navbar-bg-color: #2d333b;
   --font-color: #acb2b8;
   --link-color: #fff;
   --regular-link-color: #1f6feb;
   --nav-link-color: white;
   --nav-active-link-color: white;
   --footer-color: #f5f5f5;
-  --footer-bg-color: #181b22;
+  --footer-bg-color: #2d333b;
   --border-color: #3d3d3d;
   --code-color: #f8f8f8;
-  --code-bg-color: #0e1117;
-  --code-inline-bg-color: #30333a;
+  --code-bg-color: #2d333b;
+  --code-inline-bg-color: #636e7b66;
   --alert-success-color: #fff;
   --alert-success-bg-color: #58a6ff;
   --alert-success-border-color: #07693c;
@@ -69,8 +69,8 @@ html.dark {
   }
 
   .table {
-    --bs-table-bg: #212529;
-    --bs-table-striped-bg: #2c3034;
+    --bs-table-bg: #2d333b;
+    --bs-table-striped-bg: #22272e;
     --bs-table-striped-color: #fff;
     --bs-table-active-bg: #373b3e;
     --bs-table-active-color: #fff;
