--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -31,6 +31,7 @@ html {
   --alert-success-border-color: #badbcc;
   --badge-bg-color: #6c757d;
   --pg-color: #212529;
+  --color-primer-border-active: #ec775c;
 
   .table {
     --bs-table-bg: rgb(0 0 0 / 0%);
