--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -772,7 +772,7 @@ ul.not-list {
 
 .badge-info {
   color: #fff;
-  background-color: #0c5f6e;
+  background-color: var(--badge-bg-color);
 }
 
 .tooltip {
