--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -52,17 +52,17 @@ html.dark {
   --main-bg-color: #22272e;
   --page-heading-bg-color: #2d333b;
   --navbar-bg-color: #2d333b;
-  --font-color: #acb2b8;
-  --link-color: #fff;
-  --regular-link-color: #1f6feb;
+  --font-color: #acbac7;
+  --link-color: #acbac7;
+  --regular-link-color: #549bf5;
   --nav-link-color: white;
   --nav-active-link-color: white;
   --footer-color: #f5f5f5;
   --footer-bg-color: #2d333b;
   --border-color: #3d3d3d;
-  --code-color: #f8f8f8;
+  --code-color: #acbac7;
   --code-bg-color: #2d333b;
-  --code-inline-bg-color: #636e7b66;
+  --code-inline-bg-color: #3c434d;
   --alert-success-color: #fff;
   --alert-success-bg-color: #58a6ff;
   --alert-success-border-color: #07693c;
@@ -87,5 +87,16 @@ html.dark {
 
     color: #fff;
     border-color: #373b3e;
+  }
+
+  .dropdown-menu {
+    --bs-dropdown-color: #acbac7;
+    --bs-dropdown-bg: #2d333b;
+    --bs-dropdown-link-color: #acbac7;
+    --bs-dropdown-link-hover-color: #fff;
+    --bs-dropdown-link-hover-bg: #6c757d;
+    --bs-dropdown-link-active-color: #fff;
+    --bs-dropdown-link-active-bg: #0d6efd;
+    --bs-dropdown-link-disabled-color: #adb5bd;
   }
 }
