dropdown link disabled color

--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -71,6 +71,7 @@ html.dark {
   --scrollbar-track-color: #2b2b2b;
   --scrollbar-handle-color: #6b6b6b;
   --scrollbar-handle-hover-color: #939393;
+  --bs-dropdown-link-disabled-color: #72777c;
 
   .btn-close {
     filter: invert(1) grayscale(100%) brightness(200%);
