--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -11,7 +11,7 @@
 
 html {
   --main-bg-color: #fff;
-  --navbar-bg-color: #2d333b;
+  --navbar-bg-color: #f8f9fa;
   --font-color: #212529;
   --link-color: #000;
   --regular-link-color: #2e2eff;
@@ -35,6 +35,9 @@ html {
   --scrollbar-track-color: #fafafa;
   --scrollbar-handle-color: #c1c1c1;
   --scrollbar-handle-hover-color: #7d7d7d;
+  --search-input-bg-color: #fff;
+  --search-input-color: #4f545a;
+
 }
 
 html.dark {
@@ -60,9 +63,22 @@ html.dark {
   --scrollbar-track-color: #2b2b2b;
   --scrollbar-handle-color: #6b6b6b;
   --scrollbar-handle-hover-color: #939393;
+  --search-input-bg-color: #404448;
+  --search-input-color: #dadadc;
 
   .btn-close {
     filter: invert(1) grayscale(100%) brightness(200%);
+  }
+
+  .navbar {
+    --#{$prefix}navbar-color: #{$navbar-dark-color};
+    --#{$prefix}navbar-hover-color: #{$navbar-dark-hover-color};
+    --#{$prefix}navbar-disabled-color: #{$navbar-dark-disabled-color};
+    --#{$prefix}navbar-active-color: #{$navbar-dark-active-color};
+    --#{$prefix}navbar-brand-color: #{$navbar-dark-brand-color};
+    --#{$prefix}navbar-brand-hover-color: #{$navbar-dark-brand-hover-color};
+    --#{$prefix}navbar-toggler-border-color: #{$navbar-dark-toggler-border-color};
+    --#{$prefix}navbar-toggler-icon-bg: #{escape-svg($navbar-dark-toggler-icon-bg)};
   }
 
   .table {
